# ManualInfluencer

./: .gitignore  .pre-commit-config.yaml  demo-Copy1.ipynb  demo.ipynb  main.ipynb  pipeline.ipynb  pyproject.toml  readme.md
manual_influencer/: constants.py  pdf_utils.py  scene_to_image_generator.py  script_generator.py  tts.py  video_generator.py
