[tool.poetry]
name = "manual_influencer"
version = "0.1.0"
description = ""
authors = ["Rodrigo Bermudez Schettino <rodrigobdz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-texttospeech = "^2.25.1"
google-genai = "^1.9.0"
google-cloud-storage = "^2.0.0"
opencv-python = "^4.11.0.86"
imageio-ffmpeg = "^0.6.0"
ffmpeg = "^1.4"
jupyter = "^1.1.1"
mutagen = "^1.47.0"
vertexai = "1.71.1"
google-cloud-aiplatform = "1.71.1"
pillow = "^11.2.0"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
